welcome build out

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -122,12 +122,16 @@
     </div>
 
     <div id='techStack' class="myArticles container-fluid">
-        <h1 class="text-center mb-4">Tech Stack</h1>
+        <h1 class="text-center mb-4">Technology Stack</h1>
         <div class="row">
-            <img src="../pics/about/html5_logo.gif" class='col-sm-4 img-fluid img-round' alt="HTML5 Logo.">
-            <img src="../pics/about/css3_logo.gif" class='col-sm-4 img-fluid img-round' alt="CSS3 Logo.">
-            <img src="../pics/about/javascript_logo.gif" class='col-sm-4 img-fluid img-round' alt="JavaScript Logo.">
-            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-4 img-fluid img-round' alt="Bootstrap Logo.">
+            <img src="../pics/about/html5_logo.gif" class='col-sm-2 img-fluid img-round' alt="HTML5 Logo.">
+            <img src="../pics/about/css3_logo.gif" class='col-sm-2 img-fluid img-round' alt="CSS3 Logo.">
+            <img src="../pics/about/javascript_logo.gif" class='col-sm-2 img-fluid img-round' alt="JavaScript Logo.">
+        </div>
+        <div class="row">
+            <img src="../pics/about/gitLogoOrangeRed.png" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
+            <img src="../pics/about/vsCodeLogo.png" class='py-3 col-sm-2 img-fluid img-square' alt="Visual Studio Code Logo.">
+            <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
         </div>
     </div>
 
