--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -75,7 +75,7 @@
         </figure>
     </div>
 
-    <section id="typeWriterSection" class="mb-5">
+    <section id="typeWriterSection" class="">
         <figure id='typeWriter' class="mx-auto">
             <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
                     style="color:darkorchid;">replace</span>(</h2>
@@ -88,28 +88,65 @@
         </figure>
     </section>
 
-    <!-- <section id="mySection" class="row container-fluid justify-content-center">
-        <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto py-4" alt="Pac Man image"
-                style="width:10rem;">
-            <div class="card-body">
-                <h5 class="card-title">Pac-Man Mini-Game</h5>
-                <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/"
-                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
-                    and JavaScript.</p>
-                <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
-                        href='../pages/blog.html#blog3'>Blog Post</a>.</p>
-                <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
-                        Game</a>
-                    <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Repo</a>
+    <section id="mySection">
+
+        <div class="row container-fluid">
+            <div class="card col-sm-4" style="width: 18rem;">
+                <img src="../pics/about/crushItApple.jpg" class="card-img-top mx-auto py-4" alt="Pac Man image"
+                    style="width:10rem;">
+                <div class="card-body">
+                    <h5 class="card-title" style="color:cornflowerblue">Passionate About Code</h5>
+                    <p class="card-text">Bachelor's Degree in Biological Sciences</p>
+                    <p class="card-text">Professional Certificate Full Stack MERN Web Development<span style="color:gray"> (in progress, Jul 2022)</span></p>
+                    <div class="btnContainer">
+                        <a href="../pages/contact.html" class="btn btn-secondary" target="_blank">Contact</a>
+                        <a href="../pages/about.html" class="btn btn-secondary btnRepo "
+                            target="'_blank">About</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-4 myArticles container-fluid my-auto">
+                <div class="row justify-content-evenly">
+                    <img src="../pics/about/html5_logo.gif" class='col-sm-2 img-fluid img-round' alt="HTML5 Logo.">
+                    <img src="../pics/about/css3_logo.gif" class='col-sm-2 img-fluid img-round' alt="CSS3 Logo.">
+                    <img src="../pics/about/javascript_logo.gif" class='col-sm-2 img-fluid img-round' alt="JavaScript Logo.">
+                </div>
+                <h1 class="text-center mb-4 menloRegular">Technology</h1>
+            </div>
+        </div>
+
+        <div class="row container-fluid">
+            <div class="col-sm-4 myArticles container-fluid my-auto">
+                <h1 class="text-center mb-4 menloRegular">Stack</h1>
+                <div class="row justify-content-evenly">
+                    <img src="../pics/about/gitLogoOrangeRed.png" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
+                    <img src="../pics/about/vsCodeLogo.png" class='py-3 col-sm-2 img-fluid img-square' alt="Visual Studio Code Logo.">
+                    <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square' alt="Bootstrap Logo.">
+                </div>
+            </div>
+
+            <div class="card col-sm-4" style="width: 18rem;">
+                <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto" alt="Pac Man image"
+                    style="width:10rem;">
+                <div class="card-body">
+                    <h5 class="card-title" style="color:cornflowerblue">Pac-Man Mini-Game</h5>
+                    <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
+                    <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
+                            href='../pages/blog.html#blog3'>Blog Post</a>.</p>
+                    <div class="btnContainer">
+                        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
+                            Game</a>
+                        <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </section> -->
 
-    <footer class="container-fluid fixed-bottom">
+    </section>
+
+    <footer class="container-fluid">
         <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
