welcome mysection add

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -91,6 +91,10 @@
     <section id="mySection">
 
         <div class="row container-fluid">
+            <div class="text-center mb-4">
+                <h2 class='menloRegular' style="color:white;">Let's Connect on <a href="../pages/blog.html">myCodingJourney</a>!</h2>
+            </div>
+
             <div class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/about/crushItApple.jpg" class="card-img-top mx-auto py-4" alt="Pac Man image"
                     style="width:10rem;">
