pacman card link tp proj

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -141,8 +141,8 @@
                     <div class="btnContainer">
                         <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                             Game</a>
-                        <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
-                            target="'_blank">View Repo</a>
+                        <a href="../pages/projects.html" class="btn btn-secondary btnRepo "
+                            target="'_blank">Projects</a>
                     </div>
                 </div>
             </div>
