welcome pacman mit pic

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/pacman/pacman_icon.png" class="card-img-top mx-auto" alt="Pac Man image"
+                <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto" alt="Pac Man image"
                     style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title" style="color:cornflowerblue">Pac-Man Mini-Game</h5>
