--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -92,7 +92,7 @@
 
         <div class="row container-fluid">
             <div class="text-center mb-4">
-                <h2 class='menloRegular' style="color:white;">Let's Connect on <a href="../pages/blog.html">myCodingJourney</a>!</h2>
+                <h2 class='menloRegular' style="color:white;">Let's connect, on <a href="../pages/blog.html">myCodingJourney</a>!</h2>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
