nav and welcome adjustments

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -50,10 +50,10 @@
                         <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/resume.html">Resume</a>
+                        <a class="nav-link" href="../pages/projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/projects.html">Projects</a>
+                        <a class="nav-link" href="../pages/resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/contact.html">Contact</a>
@@ -131,18 +131,15 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto" alt="Pac Man image"
+                <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto py-3" alt="Pac Man image"
                     style="width:10rem;">
                 <div class="card-body">
-                    <h5 class="card-title" style="color:cornflowerblue">Pac-Man Mini-Game</h5>
-                    <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-                    <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
-                            href='../pages/blog.html#blog3'>Blog Post</a>.</p>
+                    <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
+                    <p class="card-text">Check out my projects or view the source code.</p>
+                    <p class="card-text">Read blog articles about my Coding Bootcamp experience.</p>
                     <div class="btnContainer">
-                        <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
-                            Game</a>
-                        <a href="../pages/projects.html" class="btn btn-secondary btnRepo "
-                            target="'_blank">Projects</a>
+                        <a href="../pages/projects.html" class="btn btn-secondary" target="_blank">Projects</a>
+                        <a href="../pages/blog.html" class="btn btn-secondary btnRepo "target="'_blank">My Blog</a>
                     </div>
                 </div>
             </div>
