welcome updates contact loc rem

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,11 +88,21 @@
             <h1 style="color:darkorchid">Let's Connect!</h1>
             <h5 style="color:gray;">Interested in code?</h5>
         </div>
-        <div class="col-sm-5 my-auto">
+        <div class="col-sm-7 my-auto">
             <div class="d-flex gap-3">
-                <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
+                <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class='img-fluid p-1 contactLogoSquare' style='margin-left:0.125rem;margin-right:-0.125rem' src="../pics/linkedin_white.png" alt="LinkedIn Logo"></a>
                 <h6 class="my-auto">@codeByPete</h6>
             </div>
+            <div class="d-flex gap-3">
+                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon.">
+                <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2" style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
+            </div>
+            <div class="d-flex gap-3" style="margin-top:-0.25rem;">
+                <a href="mailto:codeTrackLift@gmail.com" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/emailIcon.gif" alt="Email icon."></a>
+                <img src="../pics/contact/emailGmail.gif" class="img-fluid" style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
+            </div>
+        </div>
+        <div class="col-sm-5 my-auto">
             <div class="d-flex gap-3">
                 <a href="https://github.com/codetracklift" target="_blank"><img class='img-fluid contactLogo p-1' src="../pics/GitHub-Mark-Light-64px.png" alt="Git Hub Logo"></a>
                 <h6 class="my-auto">@codeTrackLift</h6>
@@ -102,21 +112,12 @@
                 <h6 class="my-auto">@codeTrackLift</h6>
             </div>
         </div>
-        <div class="col-sm-7 my-auto">
-            <div class="d-flex gap-3" style="margin-bottom:-0.125rem;">
-                <a href="mailto:codeTrackLift@gmail.com" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/emailIcon.gif" alt="Email icon."></a>
-                <img src="../pics/contact/emailGmail.gif" class="img-fluid" style='max-width:15rem;margin-left:-0.5rem;' alt="Email picture">
-            </div>
-            <div class="d-flex gap-3">
-                <img class='img-fluid contactLogo' src="../pics/contact/phoneIcon.gif" alt="Phone icon.">
-                <img src="../pics/contact/phoneGvoice.gif" class="img-fluid py-2" style='max-width:7rem;margin-left:-0.25rem;' alt="Phone number picture">
-            </div>
-            <div class="d-flex gap-3" style="margin-top: -0.25rem;">
+        
+        
+            <!-- <div class="d-flex gap-3">
                 <a href="https://goo.gl/maps/zvaZenYgiZJq4MrD7" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/locationIcon.gif" alt="Location Icon"></a>
                 <h6 class="my-auto">Philadelphia, PA USA</h6>
-            </div>
-        </div>
-
+            </div> -->
     </div>
 
     <div id='contact' class='myArticles container-fluid mt-4'>
