--- a/pages/projects.html
+++ b/pages/projects.html
@@ -100,7 +100,7 @@
                     <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                         Game</a>
                     <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="card col-sm-4" style="width: 18rem;">
             <img src="../pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
             <div class="card-body">
-                <h5 class="card-title">L.M.N.O. Photography</h5>
+                <h5 class="card-title">Photographer Landingpage</h5>
                 <p class="card-text">Built <span>landingpage</span> <a href="https://www.lmnophoto.biz"
                         target="_blank">lmnophoto.biz</a> for a Photographer who specializes in weddings and events!</p>
                 <p class="card-text">This was my <span>first website</span> using <a
@@ -118,7 +118,7 @@
                 <div class="btnContainer">
                     <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                     <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try
                         Demo</a>
                     <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                     <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
                         target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
                     <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
                         target="'_blank">Play Game</a>
                     <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -180,7 +180,7 @@
                 alt="Screenshot of a Rock, Paper, Scissors project.">
             <div class="card-body">
                 <h5 class="card-title">Landingpage Project</h5>
-                <p class="card-text">My <span>first Landingpage Project</span>, this was completed as part of <a
+                <p class="card-text">My <span>first Landingpage</span>, this was completed as part of <a
                         href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations course.
                 </p>
                 <p class="card-text">This was made using vanilla HTML and CSS after completing the <a
@@ -191,7 +191,7 @@
                     <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
                         target="'_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Repo</a>
+                        target="'_blank">View Code</a>
                 </div>
             </div>
         </div>
