--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -92,7 +92,7 @@
 
         <div class="row container-fluid">
             <div class="text-center mb-4">
-                <h2 class='menloRegular' style="color:white;">Let's connect, on <a href="../pages/blog.html">myCodingJourney</a>!</h2>
+                <h2 class='menloRegular' style="color:white;">Check out <a href="../pages/blog.html">myCodingJourney</a>...</h2>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -103,9 +103,9 @@
                     <p class="card-text">Bachelor's Degree in Biological Sciences</p>
                     <p class="card-text">Professional Certificate Full Stack MERN Web Development<span style="color:gray"> (in progress, Jul 2022)</span></p>
                     <div class="btnContainer">
-                        <a href="../pages/contact.html" class="btn btn-secondary" target="_blank">Contact</a>
-                        <a href="../pages/about.html" class="btn btn-secondary btnRepo "
-                            target="'_blank">About</a>
+                        <a href="../pages/about.html" class="btn btn-secondary"
+                        target="'_blank">About Me</a>
+                        <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
                     </div>
                 </div>
             </div>
