--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -69,7 +69,7 @@
 
     <div id='welcome' class='container-fluid animationBorder'>
         <figure class=''>
-            <h1 class='animationDropDown'><span class='animationTurnOpaque'>Thanks for visiting</span></h1>
+            <h1 class='animationDropDown'><span class='animationTurnOpaque'>Welcome to</span></h1>
             <h1 class='animationSlideFromLeft'><span>code</span><span>By</span><span
                     class='animationExpand'>Pe</span><span class='animationTurnGreen'>te</span></h1>
         </figure>
