welcome card wordsm

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -92,7 +92,7 @@
 
         <div class="row container-fluid">
             <div class="text-center mb-4">
-                <h4 class='menloRegular' style="color:white;">Check out <a href="../pages/blog.html">myCodingJourney</a>...</h4>
+                <h5 class='menloRegular' style="color:white;">Check out <a href="../pages/blog.html">myCodingJourney</a>...</h5>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
@@ -100,9 +100,10 @@
                     style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title" style="color:cornflowerblue">Passionate About Code</h5>
-                    <p class="card-text">Bachelor's Degree in Biological Sciences</p>
-                    <p class="card-text">Professional Certificate Full Stack MERN Web Development<span style="color:gray"> (in progress, Jul 2022)</span></p>
-                    <div class="btnContainer">
+                    <p class="card-text">Degree in Biological Sciences</p>
+                    <p class="card-text">20 year Pharmaceutical Professional</p>
+                    <p class="card-text">Full Stack MERN Developer<span style="color:gray"> (in progress, Jul 2022)</span></p>
+                    <div class="btnContainer mt-3">
                         <a href="../pages/about.html" class="btn btn-secondary"
                         target="'_blank">About Me</a>
                         <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
@@ -135,9 +136,9 @@
                     style="width:10rem;">
                 <div class="card-body">
                     <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
-                    <p class="card-text">Check out my projects or view the source code.</p>
+                    <p class="card-text">Demo projects or view source code on GitHub.</p>
                     <p class="card-text">Read blog articles about my Coding Bootcamp experience.</p>
-                    <div class="btnContainer">
+                    <div class="btnContainer mt-3">
                         <a href="../pages/projects.html" class="btn btn-secondary" target="_blank">Projects</a>
                         <a href="../pages/blog.html" class="btn btn-secondary btnRepo "target="'_blank">My Blog</a>
                     </div>
