--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -92,7 +92,7 @@
 
         <div class="row container-fluid">
             <div class="text-center mb-4">
-                <h5 class='menloRegular' style="color:white;">Check out <a href="../pages/blog.html">myCodingJourney</a>...</h5>
+                <h5 class='menloRegular' style="color:white;">Join me, on <a href="../pages/blog.html">myCodingJourney</a>...</h5>
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
