welcome btn target blank only contact

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -104,8 +104,7 @@
                     <p class="card-text">20 year Pharmaceutical Professional</p>
                     <p class="card-text">Full Stack MERN Developer<span style="color:gray"> (in progress, Jul 2022)</span></p>
                     <div class="btnContainer mt-3">
-                        <a href="../pages/about.html" class="btn btn-secondary"
-                        target="'_blank">About Me</a>
+                        <a href="../pages/about.html" class="btn btn-secondary">About Me</a>
                         <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
                     </div>
                 </div>
@@ -139,8 +138,8 @@
                     <p class="card-text">Demo projects or view source code on GitHub.</p>
                     <p class="card-text">Read blog articles about my Coding Bootcamp experience.</p>
                     <div class="btnContainer mt-3">
-                        <a href="../pages/projects.html" class="btn btn-secondary" target="_blank">Projects</a>
-                        <a href="../pages/blog.html" class="btn btn-secondary btnRepo "target="'_blank">My Blog</a>
+                        <a href="../pages/projects.html" class="btn btn-secondary">Projects</a>
+                        <a href="../pages/blog.html" class="btn btn-secondary btnRepo">My Blog</a>
                     </div>
                 </div>
             </div>
