--- a/pages/contact.html
+++ b/pages/contact.html
@@ -128,15 +128,15 @@
             <form class='' action="https://formsubmit.co/f61adf2ff38bc5c4deb30cb261bf1ec0" method="POST">
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Name: </label>
-                    <input class='col-sm-10' type="text" name='name' placeholder='Your Name (Required)' required>
+                    <input class='col-sm-10' type="text" name='name' placeholder='Enter name here' required>
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Email:</label>
-                    <input class='col-sm-10' type="email" name='email' placeholder="your_email@domain.com (Required)" required>
+                    <input class='col-sm-10' type="email" name='email' placeholder="Enter email@domain.com" required>
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Message:</label>
-                    <textarea class='col-sm-10' name="message" cols="30" rows="5" placeholder="Why do you love code? (Required)" required></textarea>
+                    <textarea class='col-sm-10' name="message" cols="30" rows="5" placeholder="Just say 'Hello!' Do you need help with a project?" required></textarea>
                 </div>
                 <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                 <input type="hidden" name="_template" value="basic">
